--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,13 @@
 
 @layer base {
   html {
-    font-size: 75%; /* Reduces base font size by 25% (16px -> 12px) */
+    @apply bg-slate-200;
   }
-  
+
   body {
-    @apply bg-slate-50 text-slate-900 font-sans;
+    @apply bg-white text-slate-900 font-sans;
+    max-width: 1600px;
+    margin: 0 auto;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
   }
 }
